[gd_scene load_steps=31 format=2]

[ext_resource path="res://Tutorial/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://Pre_start_screen/Background/Simplebackgrounds--1i4w8b919j395g8f0z/pngs/bubbles/bubble_bg_large_screen_blue.png" type="Texture" id=2]
[ext_resource path="res://Tutorial/tutorial_math_fight.png" type="Texture" id=3]
[ext_resource path="res://UI/fonts/GravityBold8.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Main_Screen/TYPE/ezgif-2-5e1af634bd60-png-73x78-sprite-png/tile004.png" type="Texture" id=5]
[ext_resource path="res://Main_Screen/TYPE/ezgif-2-4ba129ef57de-png-73x78-sprite-png/tile004.png" type="Texture" id=6]
[ext_resource path="res://Tutorial/UI-66.png" type="Texture" id=7]
[ext_resource path="res://Tutorial/UI-42.png" type="Texture" id=8]
[ext_resource path="res://Main_Screen/Life Hacks.otf" type="DynamicFontData" id=9]
[ext_resource path="res://Main_Screen/glove_bar.jpg" type="Texture" id=10]
[ext_resource path="res://Game_tutorial/unpress.png" type="Texture" id=11]
[ext_resource path="res://Game_tutorial/tile001.png" type="Texture" id=12]
[ext_resource path="res://Tutorial/Capture d’écran (6).png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=14]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="StreamTexture" id=15]
flags = 4
load_path = "res://.import/UI-46.png-00f447227272614d6815b714c65d4057.stex"

[sub_resource type="StreamTexture" id=16]
flags = 4
load_path = "res://.import/UI-65.png-b85d76029b5faf9db5e991d24bb25a26.stex"

[sub_resource type="DynamicFont" id=17]
font_data = ExtResource( 9 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = -723.0
margin_top = -457.587
margin_right = 2607.0
margin_bottom = 907.413
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Go_Right" type="Node2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="Go_Right"]
margin_left = 119.0
margin_top = 85.0
margin_right = 735.0
margin_bottom = 502.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Go_Right"]
margin_left = 125.894
margin_top = 90.9194
margin_right = 986.894
margin_bottom = 672.919
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selection" type="Node2D" parent="Go_Right"]

[node name="position" type="Node2D" parent="Go_Right/selection"]
__meta__ = {
"_edit_group_": true
}

[node name="clock_pos" type="Position2D" parent="Go_Right/selection/position"]
position = Vector2( 416.433, 479.291 )

[node name="pause_home" type="Position2D" parent="Go_Right/selection/position"]

[node name="ragebar" type="Position2D" parent="Go_Right/selection/position"]
position = Vector2( 684.702, 251.432 )

[node name="equation" type="Position2D" parent="Go_Right/selection/position"]
position = Vector2( 425.413, 386.127 )

[node name="answer" type="Position2D" parent="Go_Right/selection/position"]
position = Vector2( 423.168, 428.781 )

[node name="attack" type="Position2D" parent="Go_Right/selection/position"]
position = Vector2( 212.145, 365.923 )

[node name="defence" type="Position2D" parent="Go_Right/selection/position"]
position = Vector2( 650, 365.923 )

[node name="health" type="Position2D" parent="Go_Right/selection/position"]
position = Vector2( 200.921, 124.593 )

[node name="selection_button" type="Node2D" parent="Go_Right/selection"]
position = Vector2( 1.30103, -0.765297 )

[node name="clock_button" type="TouchScreenButton" parent="Go_Right/selection/selection_button"]
position = Vector2( 234.595, 466.944 )
scale = Vector2( 20, 1.3 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Go_Right/selection/selection_button/clock_button"]
self_modulate = Color( 0.85098, 0.00784314, 0.00784314, 0.243137 )
margin_right = 20.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rage_bar_button" type="TouchScreenButton" parent="Go_Right/selection/selection_button"]
position = Vector2( 677.967, 180.716 )
scale = Vector2( 1, 6.5 )
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Go_Right/selection/selection_button/rage_bar_button"]
self_modulate = Color( 0.94902, 0.0392157, 0.337255, 0.341176 )
margin_left = -5.0
margin_right = 21.0
margin_bottom = 21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equation_button" type="TouchScreenButton" parent="Go_Right/selection/selection_button"]
position = Vector2( 183.752, 416.199 )
scale = Vector2( 25, 1.3 )
shape = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Go_Right/selection/selection_button/equation_button"]
self_modulate = Color( 0.690196, 0.0862745, 0.341176, 0.380392 )
margin_top = 1.0
margin_right = 19.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer_button" type="TouchScreenButton" parent="Go_Right/selection/selection_button"]
position = Vector2( 333.371, 373.78 )
scale = Vector2( 10, 2 )
shape = SubResource( 4 )

[node name="attack_button" type="TouchScreenButton" parent="Go_Right/selection/selection_button"]
position = Vector2( 168.369, 334.494 )
scale = Vector2( 4, 3 )
shape = SubResource( 5 )

[node name="ColorRect" type="ColorRect" parent="Go_Right/selection/selection_button/attack_button"]
self_modulate = Color( 0.878431, 0.792157, 0.0862745, 0.231373 )
margin_right = 21.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="defence_button" type="TouchScreenButton" parent="Go_Right/selection/selection_button"]
position = Vector2( 611.742, 335.616 )
scale = Vector2( 4, 3 )
shape = SubResource( 5 )

[node name="ColorRect" type="ColorRect" parent="Go_Right/selection/selection_button/defence_button"]
self_modulate = Color( 0.905882, 0.894118, 0.156863, 0.329412 )
margin_right = 20.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="TouchScreenButton" parent="Go_Right/selection/selection_button"]
position = Vector2( 135.818, 101.022 )
scale = Vector2( 9, 2 )
shape = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Go_Right/selection/selection_button/health"]
self_modulate = Color( 0.207843, 0.839216, 0.247059, 0.235294 )
margin_right = 20.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Node2D" parent="Go_Right/selection"]
position = Vector2( 49.3883, 60.6129 )

[node name="clock_text" type="Label" parent="Go_Right/selection/Text"]
visible = false
margin_left = -10.0
margin_top = -42.0
margin_right = 840.0
margin_bottom = 336.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/line_spacing = 5
text = "the clock indicate the amount
of time left to choose an 
answer"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rage_text" type="Label" parent="Go_Right/selection/Text"]
visible = false
margin_left = -90.9194
margin_top = 118.981
margin_right = 901.081
margin_bottom = 263.981
custom_fonts/font = SubResource( 8 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/line_spacing = 5
text = "the rage bar will fill up at 
each punch if it's full
the enemy will hit with double the 
amount of damage even if you get the
answer right"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equation_text" type="Label" parent="Go_Right/selection/Text"]
visible = false
margin_top = 53.8782
margin_right = 768.0
margin_bottom = 106.878
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/line_spacing = 5
text = "the equation will give you the number 
that you need to find the answer"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer_text" type="Label" parent="Go_Right/selection/Text"]
visible = false
margin_left = 43.776
margin_top = 89.797
margin_right = 805.776
margin_bottom = 229.797
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/line_spacing = 5
text = "after the equation is complete
you need to choose answer between
the three shown on the screen
if you choose right you will have the 
option to attack or defend"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_text" type="Label" parent="Go_Right/selection/Text"]
visible = false
margin_left = 46.0209
margin_top = 143.675
margin_right = 721.021
margin_bottom = 225.675
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/line_spacing = 5
text = "if you choose to attack  you will
reduce the enemy life but you
will charge his rage bar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="defence_text" type="Label" parent="Go_Right/selection/Text"]
visible = false
margin_left = 11.2247
margin_top = 182.961
margin_right = 770.225
margin_bottom = 264.961
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/line_spacing = 5
text = "if you choose to defend than you will
not reduce the enemy life but
you will reduce his ragebar "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="Go_Right/selection/Text"]
visible = false
margin_left = -123.471
margin_top = 57.2455
margin_right = 938.529
margin_bottom = 139.246
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/line_spacing = 5
text = "your health represent the number of hp
 that you got 
if it reachs zero you loose"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Go_Right"]
margin_left = 12.347
margin_top = 505.108
margin_right = 872.347
margin_bottom = 578.108
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/line_spacing = 5
text = "click on the part you want to 
understand"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="go_back" type="TouchScreenButton" parent="."]
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 432.428, 289.562 )
current = true
limit_left = 0
smoothing_enabled = true
smoothing_speed = 1.0

[node name="go_right" type="TouchScreenButton" parent="."]
position = Vector2( 745.873, 231.826 )
scale = Vector2( 0.526761, 0.51071 )
normal = SubResource( 15 )
pressed = SubResource( 16 )

[node name="go_left" type="TouchScreenButton" parent="."]
position = Vector2( 869.554, 229.983 )
scale = Vector2( 0.526761, 0.51071 )
normal = ExtResource( 8 )
pressed = ExtResource( 7 )

[node name="Go_Left" type="Node2D" parent="."]
position = Vector2( -6, 0 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="Go_Left"]
position = Vector2( 1284, 7.00001 )
scale = Vector2( 1.71233, 1.62821 )
normal = ExtResource( 11 )
pressed = ExtResource( 12 )

[node name="Label" type="Label" parent="Go_Left"]
margin_left = 1035.0
margin_top = 478.0
margin_right = 1669.0
margin_bottom = 549.0
custom_fonts/font = SubResource( 17 )
text = "click the button if you want to do the game tutorial again"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Capture d’écran (6)" type="Sprite" parent="Go_Left"]
position = Vector2( 1352.81, 288.39 )
scale = Vector2( 0.807122, 0.779956 )
texture = ExtResource( 13 )

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 865.825
margin_top = 4.76224
margin_right = 2169.83
margin_bottom = 588.762
texture = ExtResource( 10 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Go_left_Tween" type="Tween" parent="."]

[node name="Go_right_Tween" type="Tween" parent="."]

[connection signal="pressed" from="Go_Right/selection/selection_button/clock_button" to="." method="_on_clock_button_pressed"]
[connection signal="pressed" from="Go_Right/selection/selection_button/rage_bar_button" to="." method="_on_rage_bar_button_pressed"]
[connection signal="pressed" from="Go_Right/selection/selection_button/equation_button" to="." method="_on_equation_button_pressed"]
[connection signal="pressed" from="Go_Right/selection/selection_button/answer_button" to="." method="_on_answer_button_pressed"]
[connection signal="pressed" from="Go_Right/selection/selection_button/attack_button" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="Go_Right/selection/selection_button/defence_button" to="." method="_on_defence_button_pressed"]
[connection signal="pressed" from="Go_Right/selection/selection_button/health" to="." method="_on_health_pressed"]
[connection signal="released" from="go_back" to="." method="_on_go_back_released"]
[connection signal="pressed" from="go_right" to="." method="_on_go_right_pressed"]
[connection signal="pressed" from="go_left" to="." method="_on_go_left_pressed"]
[connection signal="pressed" from="Go_Left/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
